VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedSmearedUp.err
[8MB/454.8MB][  1%][>                                                 ][2.667MB/s]  [16MB/454.8MB][  3%][=>                                                ][3.2MB/s]  [24MB/454.8MB][  5%][==>                                               ][4MB/s]  [32MB/454.8MB][  7%][===>                                              ][4MB/s]  [40MB/454.8MB][  8%][====>                                             ][4.444MB/s]  [48MB/454.8MB][ 10%][=====>                                            ][4.8MB/s]  [56MB/454.8MB][ 12%][======>                                           ][4.667MB/s]  [64MB/454.8MB][ 14%][=======>                                          ][4.923MB/s]  [72MB/454.8MB][ 15%][=======>                                          ][4.8MB/s]  [80MB/454.8MB][ 17%][========>                                         ][4.444MB/s]  [88MB/454.8MB][ 19%][=========>                                        ][4.4MB/s]  [96MB/454.8MB][ 21%][==========>                                       ][4.174MB/s]  [104MB/454.8MB][ 22%][===========>                                      ][3.852MB/s]  [112MB/454.8MB][ 24%][============>                                     ][3.613MB/s]  [120MB/454.8MB][ 26%][=============>                                    ][3.429MB/s]  [128MB/454.8MB][ 28%][==============>                                   ][3.282MB/s]  [136MB/454.8MB][ 29%][==============>                                   ][3.163MB/s]  [144MB/454.8MB][ 31%][===============>                                  ][3MB/s]  [152MB/454.8MB][ 33%][================>                                 ][2.923MB/s]  [160MB/454.8MB][ 35%][=================>                                ][2.857MB/s]  [168MB/454.8MB][ 36%][==================>                               ][2.754MB/s]  [176MB/454.8MB][ 38%][===================>                              ][2.667MB/s]  [184MB/454.8MB][ 40%][====================>                             ][2.667MB/s]  [192MB/454.8MB][ 42%][=====================>                            ][2.743MB/s]  [200MB/454.8MB][ 43%][=====================>                            ][2.778MB/s]  [208MB/454.8MB][ 45%][======================>                           ][2.849MB/s]  [216MB/454.8MB][ 47%][=======================>                          ][2.919MB/s]  [224MB/454.8MB][ 49%][========================>                         ][2.947MB/s]  [232MB/454.8MB][ 51%][=========================>                        ][3.013MB/s]  [240MB/454.8MB][ 52%][==========================>                       ][3.038MB/s]  [248MB/454.8MB][ 54%][===========================>                      ][3.1MB/s]  [256MB/454.8MB][ 56%][============================>                     ][3.16MB/s]  [264MB/454.8MB][ 58%][=============================>                    ][3.181MB/s]  [272MB/454.8MB][ 59%][=============================>                    ][3.238MB/s]  [280MB/454.8MB][ 61%][==============================>                   ][3.294MB/s]  [288MB/454.8MB][ 63%][===============================>                  ][3.31MB/s]  [296MB/454.8MB][ 65%][================================>                 ][3.364MB/s]  [304MB/454.8MB][ 66%][=================================>                ][3.416MB/s]  [312MB/454.8MB][ 68%][==================================>               ][3.429MB/s]  [320MB/454.8MB][ 70%][===================================>              ][3.478MB/s]  [328MB/454.8MB][ 72%][====================================>             ][3.527MB/s]  [336MB/454.8MB][ 73%][====================================>             ][3.574MB/s]  [344MB/454.8MB][ 75%][=====================================>            ][3.621MB/s]  [352MB/454.8MB][ 77%][======================================>           ][3.629MB/s]  [360MB/454.8MB][ 79%][=======================================>          ][3.673MB/s]  [368MB/454.8MB][ 80%][========================================>         ][3.717MB/s]  [376MB/454.8MB][ 82%][=========================================>        ][3.723MB/s]  [384MB/454.8MB][ 84%][==========================================>       ][3.765MB/s]  [392MB/454.8MB][ 86%][===========================================>      ][3.769MB/s]  [400MB/454.8MB][ 87%][===========================================>      ][3.81MB/s]  [408MB/454.8MB][ 89%][============================================>     ][3.813MB/s]  [416MB/454.8MB][ 91%][=============================================>    ][3.817MB/s]  [424MB/454.8MB][ 93%][==============================================>   ][3.855MB/s]  [432MB/454.8MB][ 94%][===============================================>  ][3.857MB/s]  [440MB/454.8MB][ 96%][================================================> ][3.86MB/s]  [448MB/454.8MB][ 98%][=================================================>][3.862MB/s]  [454.8MB/454.8MB][100%][==================================================][3.854MB/s]  [454.8MB/454.8MB][100%][==================================================][3.854MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_50616/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_50616/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
